--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               </div>
               <h3 class="pad-bt15">Conteúdo</h3>
               <p>O curso consiste em implementar uma aplicação Java-Web passo a passo utilizando recursos inovadores 
-                da plataforma Java desde a versão 8 até a 15. Alguns tópicos: modularização, records, lambda, passando funções como parametros, etc. 
+                da plataforma Java desde a versão 8 até a 15. Alguns tópicos: modularização, records, lambda, objetos anônimos, etc. 
               </p>
             </div>
           </div>
