--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               </div>
               <h3 class="pad-bt15">Java</h3>
               <p>No curso usaremos a versão 15 do Java. Utilizando o que há de mais atual na plataforma Java como modularização, jlink, records e etc. 
-                Entretanto para realizar o curso o requisito básico para o aluno é ter noções de lógica de programação.
+                Entretanto o requisito básico é ter noções de Java, ou seja, não é necessário nenhum conhecimento específico de Java ou de seus frameworks.
        
               </p>
             </div>
@@ -169,7 +169,7 @@
               <h3 class="pad-bt15">Spring</h3>
               <p>
                 No curso faremos uso intensivo do principal e mais utilizado framework Java o Spring. Novamente o requisito 
-                básico é ter noções de lógica de programação, ou seja, não é necessário qualquer conhecimento de Java ou seus frameworks.
+                básico é ter noções de Java, ou seja, não é necessário nenhum conhecimento específico de Java ou de seus frameworks.
               </p>
             </div>
           </div>
