--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                 <i class="fa fa-download fa-fw pull-center fa-2x"></i>
               </div>
               <h3 class="pad-bt15">Inscrição</h3>
-              <p>Faça sua Inscrição, receba a confirmação e os links de acesso para 
-                as aulas onlines, tenha acesso a repositórios com exercícios e códigos e 
-                receba o material de estudo.
+              <p>Curso com aulas online e vagas limitadas.
+                A inscrição deve ser solicitada por email. Havendo vagas disponíveis
+                receberá no dia das aulas os links para participação. 
               </p>
             </div>
           </div>
@@ -189,7 +189,7 @@
                   <p><b>total horas:</b> 20 horas</p>
                   <p><b>investimento:</b> R$ 879</p>
                   <p>
-                   envie um email para receber instruções de como realizar o pagamento
+                   vagas limitadas!
                   </p>
                 </div>
                 <p>* horário de Brasília</p>
