--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <h3 class="pad-bt15">Inscrição</h3>
               <p>Curso com aulas online e vagas limitadas.
                 Após confirmação de disponibilidade e pagamento o aluno
-                receberá no dia das aulas os links para participação. 
+                receberá no dia das aulas os links para participação.
               </p>
             </div>
           </div>
@@ -142,6 +142,7 @@
               <h3 class="pad-bt15">Conteúdo</h3>
               <p>O curso consiste em implementar uma aplicação Java-Web passo a passo utilizando recursos inovadores 
                 da plataforma Java desde a versão 8 até a 15. Alguns tópicos: modularização, records, lambda, objetos anônimos, etc. 
+                Baixe <b><a href="documentation/akumoJava815.pdf">aqui</a></b> a ementa do curso.
               </p>
             </div>
           </div>
