--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <i class="fa fa-github fa-fw pull-center fa-2x"></i>
               </div>
               <h3 class="pad-bt15">Material</h3>
-              <p>Durante o curso iremos implementar uma aplicação java-web do zero, 
+              <p>Durante o curso iremos implementar uma aplicação java do zero, 
                 como apoio auxiliar os alunos terão acesso à: materias exclusivos, ebooks e repositórios de códigos</p>
             </div>
           </div>
@@ -140,7 +140,7 @@
                 </i>
               </div>
               <h3 class="pad-bt15">Conteúdo</h3>
-              <p>O curso consiste em implementar uma aplicação Java-Web passo a passo utilizando recursos inovadores 
+              <p>O curso consiste em implementar uma aplicação Java passo a passo utilizando recursos inovadores 
                 da plataforma Java desde a versão 8 até a 15. Alguns tópicos: modularização, records, lambda, objetos anônimos, etc. 
                 Baixe <b><a href="documentation/akumoJava815.pdf">aqui</a></b> a ementa do curso.
               </p>
@@ -169,7 +169,7 @@
               </div>
               <h3 class="pad-bt15">Spring</h3>
               <p>
-                No curso faremos uso intensivo do principal e mais utilizado framework Java o Spring. Novamente o requisito 
+                Em alguns momentos do curso faremos uso do principal e mais utilizado framework Java, o Spring. Novamente o requisito 
                 básico é ter noções de Java, ou seja, não é necessário nenhum conhecimento específico de Java ou de seus frameworks.
               </p>
             </div>
