better sub title

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div class="banner-info text-center wow fadeIn delay-05s">
                 <h1 class="bnr-title">curso 100% prático de</h1>
                 <h2 class="bnr-sub-title">Master Java 8<span class="logo-dec">15</span></h2>
-                <p class="bnr-para">como aproveitar todas as mudanças das versões 8 a 15
+                <p class="bnr-para">como melhor aproveitar todas as mudanças <br>das versões 8 a 15
                 <div class="brn-btn">
                   <a href="#cursos" class="btn btn-download">Saiba mais</a>
                   <a href="#contact" class="btn btn-more">contatos</a>
