--- a/index.html
+++ b/index.html
@@ -209,7 +209,11 @@ Atualmente faço parte do time que implementa microservicos com java e spring pa
           </div>
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="loction-info white">
-              <p><i class="fa fa-mobile-phone fa-fw pull-left fa-2x"></i>+351 914560821</p>
+              <p><i class="fa fa-linkedin fa-fw pull-left fa-2x">
+                <a class="whiteLink" href="https://www.linkedin.com/in/alisson-pedrina/">
+                </i>linkedin.com/in/alisson-pedrina
+                </a>
+              </p>
               <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>akumoplatform@gmail.com</p>
             </div>
           </div>
