--- a/index.html
+++ b/index.html
@@ -136,11 +136,12 @@
                   <p><b>início:</b> 07/02/21</p>
                   <p><b>aulas:</b> aos domingos</p>
                   <p><b>horário:</b> 9:00 às 12:00 *</p>
-                  <p><b>total horas:</b> 20 horas</p>
-                  <p><b>vagas:</b> somente 10</p>
-                  <p><b>investimento:</b> R$ 799</p>
+                  <p><b>total horas:</b> 6 horas</p>
+                  <p><b>investimento:</b> R$ 199,00</p>
+                  <p><b>invest. inclusivo:</b> R$ 99,00 **</p>
                 </div>
                 <p>* horário de Brasília</p>
+                <p>** mulheres, negros, lgbt</p>
               </p>
             </div>
           </div>
